<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cmd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/enter_send_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="top|left"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/cmd_edit_text_size" />

        <Button
            android:id="@+id/send"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/item_margin"
            android:text="@string/send_title"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inner_cmd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/inner_cmd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/spinner_bg" />

        <Button
            android:id="@+id/select_cmd_file"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/select_inner_cmd_file_title"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/send_inner_cmd"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/send_title"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <Spinner
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/item_margin"
        android:background="@drawable/spinner_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/baud_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/spinner_bg" />

        <ToggleButton
            android:id="@+id/switch_toggle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/send_format_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_text_size"/>

        <RadioGroup
            android:id="@+id/send_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/send_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_title"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/send_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_title"
                android:textSize="@dimen/radio_button_text_size" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_gravity="center_vertical"
            android:text="@string/line_break_title"
            android:textColor="@color/white"
            android:textSize="@dimen/check_box_text_size" />

        <EditText
            android:id="@+id/send_line_break"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight= "1"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/line_break"
            android:background="@drawable/edit_text_bg"
            android:gravity="top|left"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/edit_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/receive_format_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_text_size"/>

        <RadioGroup
            android:id="@+id/receive_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/receive_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_title"
                android:textSize="@dimen/radio_button_text_size" />

            <RadioButton
                android:id="@+id/receive_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_title"
                android:textSize="@dimen/radio_button_text_size" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/item_margin"
            android:text="@string/line_break_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_text_size" />

        <EditText
            android:id="@+id/receive_line_break"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/line_break"
            android:background="@drawable/edit_text_bg"
            android:gravity="top|left"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/edit_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/send_delay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/send_interval_time"
            android:background="@drawable/edit_text_bg"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:singleLine="true"
            android:textSize="@dimen/edit_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/time_unit_margin_left"
            android:text="@string/time_unit_title"
            android:textColor="@color/white"
            android:textSize="@dimen/time_unit_text_size" />

        <CheckBox
            android:id="@+id/auto_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginRight="@dimen/item_margin"
            android:text="@string/auto_title"
            android:textColor="@color/white"
            android:textSize="@dimen/check_box_text_size" />

    </LinearLayout>

</LinearLayout>